tests/semantic_errors/err04_unreachable_code.java
public class Error04 {
    public static void main(String[] args) {
        int x;
        return;
        x = 10; // Error: Unreachable code detected
    }
}
